class PatternsHook < ApplicationRecord
  belongs_to :pattern
  belongs_to :hook
end
