class PatternsNeedle < ApplicationRecord
  belongs_to :pattern
  belongs_to :needle
end
