class PatternsYarn < ApplicationRecord
  belongs_to :pattern
  belongs_to :yarn
end
