class ProjectsNeedle < ApplicationRecord
  belongs_to :project
  belongs_to :needle
end
